# lenspr

./: .gitignore  LICENSE  Makefile  README.md  demo.tape  package-lock.json  plan.md  pyproject.toml  server.json
.claude/: CLAUDE.md  CONTEXT.md
.claude/plans/: NEXT-STEPS.md  PRODUCT.md  production-readiness.md
.github/workflows/: ci.yml
assets/: demo-bashrc  demo-impact.sh  demo-output.sh  demo-setup.sh  demo-shell.sh
assets/demo-bin/: lenspr  pip
docs/: ARCHITECTURE.md  TOOLS.md
eval/: MANUAL_TEST_PROMPTS.md  benchmark.ipynb  benchmark_v2.ipynb  create_killer_features_nb.py  demo.ipynb  generate_charts.py  killer_features.ipynb  lenspr_evaluation.ipynb  setup_test_project.py
lenspr/: __init__.py  architecture.py  claude_tools.py  cli.py  context.py  database.py  doctor.py  graph.py  mcp_server.py  models.py  monorepo.py  patcher.py  pytest_tracer.py  stats.py  tool_groups.py  tracer.py  tracker.py  validator.py
lenspr/helpers/: package-lock.json  package.json  ts_resolver.js
lenspr/parsers/: __init__.py  base.py  multi.py  node_resolver.py  python_parser.py  ts_resolver.py  typescript_parser.py
lenspr/plugins/: __init__.py
lenspr/prompts/: system.md
lenspr/resolvers/: __init__.py  api_mapper.py  ci_mapper.py  config.py  ffi_mapper.py  infra_mapper.py  lsp_client.py  pyright_resolver.py  sql_mapper.py  tsserver_resolver.py
lenspr/tools/: __init__.py  analysis.py  annotation.py  arch.py  entry_points.py  explain.py  git.py  helpers.py  modification.py  navigation.py  patterns.py  resolvers.py  safety.py  schemas.py  session.py  temporal.py  testing.py  trace.py
tests/: test_analysis.py  test_annotations.py  test_api_mapper.py  test_arch_tools.py  test_architecture.py  test_batch_rollback.py  test_ci_mapper.py  test_cli.py  test_context.py  test_database.py  test_doctor.py  test_entry_points.py  test_explain_tools.py  test_ffi_mapper.py  test_git_tools.py  test_graph.py  test_helpers.py  test_infra_mapper.py  test_lsp_client.py  test_mcp_server.py  test_modification_guards.py  test_navigation.py  test_parser.py  test_patcher.py  test_pyright_resolver.py  test_safety.py  test_session_tools.py  test_sql_mapper.py  test_tool_groups.py  test_tool_operations.py  test_tracker.py  test_ts_resolver.py  test_tsserver_resolver.py  test_typescript_parser.py  test_validator.py
tests/fixtures/sample_project/: main.py  models.py
tests/fixtures/sample_project/utils/: helpers.py
