[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lenspr"
version = "0.1.0"
description = "Code-as-graph for safe LLM-assisted development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "kyrylopr" },
]
keywords = ["llm", "code-analysis", "graph", "ast", "refactoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "networkx>=3.0",
    "jedi>=0.19",
]

[project.optional-dependencies]
typescript = [
    "tree-sitter>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
]
mcp = [
    "mcp>=1.0",
]
watch = [
    "watchdog>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-networkx>=3.0",
]
# Full installation with all features (recommended)
all = [
    "lenspr[typescript]",
    "lenspr[mcp]",
    "lenspr[watch]",
]
# Full installation for development
all-dev = [
    "lenspr[all]",
    "lenspr[dev]",
]

[project.scripts]
lenspr = "lenspr.cli:main"

[project.urls]
Homepage = "https://github.com/kyrylopr/lenspr"
Repository = "https://github.com/kyrylopr/lenspr"
Issues = "https://github.com/kyrylopr/lenspr/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"lenspr/graph.py" = ["N803", "N806"]
"lenspr/claude_tools.py" = ["N806"]
"tests/test_graph.py" = ["N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["jedi", "jedi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tree_sitter", "tree_sitter.*", "tree_sitter_javascript", "tree_sitter_typescript"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp", "mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["watchdog", "watchdog.*"]
ignore_missing_imports = true
